[package]
name = "stunnel"
version = "2.2.0"
authors = ["airtrack <airtrack.sk@gmail.com>"]
edition = "2024"

[dependencies]
socks5 = { git = "https://github.com/airtrack/sproxy.git" }
httpproxy = { git = "https://github.com/airtrack/sproxy.git" }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
async-trait = "*"
httparse = "*"
quinn = "0.11"
rcgen = "0.13"
rustls = "0.23"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.8"
tokio-rustls = "0.26"
s2n-quic = { version = "1", features = ["unstable-congestion-controller"] }
